feat: 建立 BLS Easy FFI 基本功能
- 實作基本的金鑰生成、簽名、驗證功能
- 支援序列化為十六進制字串
- 完整的記憶體管理
- 通過所有基本功能測試
- 建立 Go FFI 介面

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# Rust
 /target/
-**/*.rs.bk
 Cargo.lock
+
+# Go
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Generated files
+src/bls_easy_ffi.h
